# 03.-Bootcamp---Python

./: README.md
aula_02 - Tipo de Operadores/: desafio.py  exercicio.py
aula_03 - Controle de Fluxo/: desafio.py  exercicios.py
aula_04 - Dicionarios e Tabelas/: main.py
aula_06_07 - Funcoes/: pyproject.toml
